Change color on statusbar in View mode

--- a/config.example.ini
+++ b/config.example.ini
@@ -70,7 +70,7 @@ link-viewer=xdg-open
 
 # You can also use xrdb colors like this xrdb:color1
 # The program will use colors prefixed with an * first then look
-# for URxvt or XTerm if it can't find any color prefixed with an asterix.
+# for URxvt or XTerm if it can't find any color prefixed with an asterik.
 # If you don't want tut to guess the prefix you can set the prefix yourself.
 # If the xrdb color can't be found a preset color will be used.
 
@@ -111,12 +111,20 @@ top-bar-background=xrdb:color5
 top-bar-text=xrdb:background
 
 # The color of the bar at the bottom
-# default=xrdb:color0
-status-bar-background=xrdb:color0
+# default=xrdb:color5
+status-bar-background=xrdb:color5
 
 # The color of the text in the bar at the bottom
 # default=xrdb:foreground
 status-bar-text=xrdb:foreground
+
+# The color of the bar at the bottom in view mode
+# default=xrdb:color4
+status-bar-view-background=xrdb:color4
+
+# The color of the text in the bar at the bottom in view mode
+# default=xrdb:foreground
+status-bar-view-text=xrdb:foreground
 
 # Background of selected list items
 # default=xrdb:color5
