notifications below timeline

--- a/config.example.ini
+++ b/config.example.ini
@@ -29,6 +29,11 @@ date-today-format=15:04
 # default=home
 timeline=home
 
+# If you want to display a list of notifications
+# under your timeline feed
+# default=true
+notification-feed=true
+
 [media]
 # Your image viewer
 # default=xdg-open
