Add option to quote when replying

--- a/config.example.ini
+++ b/config.example.ini
@@ -49,6 +49,10 @@ timeline=home
 # default=true
 notification-feed=true
 
+# If you want to quote original message when replying
+# default=false
+quote-reply=false
+
 [media]
 # Your image viewer
 # default=xdg-open
