Add support for quotes

--- a/config.example.ini
+++ b/config.example.ini
@@ -49,7 +49,7 @@ timeline=home
 # default=true
 notification-feed=true
 
-# If you want to quote original message when replying
+# If you always want to quote original message when replying
 # default=false
 quote-reply=false
 
