open urls in different programs

--- a/config.example.ini
+++ b/config.example.ini
@@ -85,6 +85,43 @@ audio-single=true
 # default=xdg-open
 link-viewer=xdg-open
 
+[open-custom]
+# This sections allows you to set up to five custom programs to upen URLs with.
+# If the url points to an image, you can set c1-name to img and c1-use to imv.
+# The name will show up in the UI, so keep it short so all five fits.
+#
+# c1-name=img
+# c1-use=imv
+# 
+# c2-name=
+# c2-use=
+# 
+# c3-name=
+# c3-use=
+# 
+# c4-name=
+# c4-use=
+# 
+# c5-name=
+# c5-use=
+
+[open-pattern]
+# Here you can set your own glob patterns for opening matching URLs in the
+# program you want them to open up in.
+# You could for example open Youtube videos in your video player instead of
+# your default browser.
+#
+# You must name the keys foo-pattern and foo-use, where use is the program 
+# that will open up the URL. To see the syntax for glob pattern you can follow
+# this URL https://github.com/gobwas/glob#syntax
+#
+# Example for youtube.com and youtu.be to open up in mpv instead of the browser
+#
+# y1-pattern=*youtube.com/watch*
+# y1-use=mpv
+# y2-pattern=*youtu.be/*
+# y2-use=mpv
+
 [style]
 # All styles can be represented in their HEX value like #ffffff or
 # with their name, so in this case white.
