Add support for notifications

--- a/config.example.ini
+++ b/config.example.ini
@@ -122,6 +122,33 @@ link-viewer=xdg-open
 # y2-pattern=*youtu.be/*
 # y2-use=mpv
 
+[desktop-notification]
+# Under this section you can turn on desktop notifications
+
+# Notification when someone follows you
+# default=false
+followers=false
+
+# Notification when someone favorites one of your toots
+# default=false
+favorite=false
+
+# Notification when someone mentions you
+# default=false
+mention=false
+
+# Notification when someone boosts one of your toots
+# default=false
+boost=false
+
+# Notification of poll results
+# default=false
+poll=false
+
+# New posts in current timeline
+# default=false
+posts=false
+
 [style]
 # All styles can be represented in their HEX value like #ffffff or
 # with their name, so in this case white.
