update example config

--- a/config.example.ini
+++ b/config.example.ini
@@ -53,6 +53,10 @@ notification-feed=true
 # default=false
 quote-reply=false
 
+# If you're on an instance with a custom character limit you can set it here 
+# default=500
+char-limit=500
+
 [media]
 # Your image viewer
 # default=xdg-open
