update example config

--- a/config.example.ini
+++ b/config.example.ini
@@ -57,6 +57,11 @@ quote-reply=false
 # default=500
 char-limit=500
 
+# If you've learnt all the shortcut keys you can remove the help text and 
+# only show the key in tui. So it gets less cluttered.
+# default=false
+short-hints=false
+
 [media]
 # Your image viewer
 # default=xdg-open
