add option to reverse files

--- a/config.example.ini
+++ b/config.example.ini
@@ -74,6 +74,11 @@ image-viewer=xdg-open
 # default=true
 image-single=true
 
+# If you want to open the images in reverse order. In some image viewers 
+# this will display the images in the "right" order.
+# default=false
+image-reverse=false
+
 # Your video viewer
 # default=xdg-open
 video-viewer=xdg-open
@@ -82,9 +87,19 @@ video-viewer=xdg-open
 # default=true
 video-single=true
 
+# If you want to open the videos in reverse order. In some video apps 
+# this will play the files in the "right" order.
+# default=false
+video-reverse=false
+
 # Your audio viewer
 # default=xdg-open
 audio-viewer=xdg-open
+
+# If you want to play the audio files in reverse order. In some audio apps 
+# this will play the files in the "right" order.
+# default=false
+audio-reverse=false
 
 # If audio files should open one by one. See above comment about image-single
 # default=true
