ability to change layout

--- a/config.example.ini
+++ b/config.example.ini
@@ -49,6 +49,29 @@ timeline=home
 # default=true
 notification-feed=true
 
+
+# Where do you want the list of toots to be placed
+# Valid values: left, right, top, bottom
+# default=left
+list-placement=left
+
+# If you have notification-feed set to true you can
+# display it under the main list of toots (row)
+# or place it to the right of the main list of toots (column)
+# default=row
+list-split=row
+
+# You can change the proportions of the list view
+# in relation to the content view
+# list-proportion=1 and content-proportoin=3
+# will result in the content taking up 3 times more space
+# Must be n > 0
+# defaults:
+# 	list-proportion=1
+# 	content-proportion=2
+list-proportion=1
+content-proportion=2
+
 # If you always want to quote original message when replying
 # default=false
 quote-reply=false
