Hide notification text

--- a/config.example.ini
+++ b/config.example.ini
@@ -61,6 +61,10 @@ list-placement=left
 # default=row
 list-split=row
 
+# Hide notification text above list in column split
+# default=false
+hide-notification-text=false
+
 # You can change the proportions of the list view
 # in relation to the content view
 # list-proportion=1 and content-proportoin=3
