--- a/config.example.ini
+++ b/config.example.ini
@@ -84,6 +84,10 @@ quote-reply=false
 # default=500
 char-limit=500
 
+# If you want to show icons in the list of toots
+# default=true
+show-icons=true
+
 # If you've learnt all the shortcut keys you can remove the help text and 
 # only show the key in tui. So it gets less cluttered.
 # default=false
