Support max width of toots

--- a/config.example.ini
+++ b/config.example.ini
@@ -44,11 +44,15 @@ date-relative=-1
 # default=home
 timeline=home
 
+# The max width of text before it wraps when displaying toots
+# 0 = no restriction
+# default=0
+max-width=0
+
 # If you want to display a list of notifications
 # under your timeline feed
 # default=true
 notification-feed=true
-
 
 # Where do you want the list of toots to be placed
 # Valid values: left, right, top, bottom
