run commands in the terminal

--- a/config.example.ini
+++ b/config.example.ini
@@ -102,6 +102,11 @@ short-hints=false
 # default=xdg-open
 image-viewer=xdg-open
 
+# Open in the same terminal as toot
+# for terminal based viewers
+# default=false
+image-terminal=false
+
 # If image should open one by one e.g. "imv image.png" multiple times
 # If set to false all images will open at the same time like this 
 # "imv image1.png image2.png image3.png".
@@ -118,6 +123,11 @@ image-reverse=false
 # default=xdg-open
 video-viewer=xdg-open
 
+# Open in the same terminal as toot
+# for terminal based players
+# default=false
+video-terminal=false
+
 # If videos should open one by one. See above comment about image-single
 # default=true
 video-single=true
@@ -131,6 +141,11 @@ video-reverse=false
 # default=xdg-open
 audio-viewer=xdg-open
 
+# Open in the same terminal as toot
+# for terminal based players
+# default=false
+audio-terminal=false
+
 # If you want to play the audio files in reverse order. In some audio apps 
 # this will play the files in the "right" order.
 # default=false
@@ -143,6 +158,11 @@ audio-single=true
 # Your web browser
 # default=xdg-open
 link-viewer=xdg-open
+
+# Open in the same terminal as toot
+# for terminal based browser
+# default=false
+link-terminal=false
 
 [open-custom]
 # This sections allows you to set up to five custom programs to upen URLs with.
