--- a/config.example.ini
+++ b/config.example.ini
@@ -167,22 +167,29 @@ link-terminal=false
 [open-custom]
 # This sections allows you to set up to five custom programs to upen URLs with.
 # If the url points to an image, you can set c1-name to img and c1-use to imv.
+# If the program runs in a terminal and you want to run it in the same terminal
+# as tut. Set cX-terminal to true.
 # The name will show up in the UI, so keep it short so all five fits.
 #
 # c1-name=img
 # c1-use=imv
+# c1-terminal=false
 # 
 # c2-name=
 # c2-use=
+# c2-terminal=false
 # 
 # c3-name=
 # c3-use=
+# c3-terminal=false
 # 
 # c4-name=
 # c4-use=
+# c4-terminal=false
 # 
 # c5-name=
 # c5-use=
+# c5-terminal=false
 
 [open-pattern]
 # Here you can set your own glob patterns for opening matching URLs in the
@@ -190,16 +197,21 @@ link-terminal=false
 # You could for example open Youtube videos in your video player instead of
 # your default browser.
 #
-# You must name the keys foo-pattern and foo-use, where use is the program 
-# that will open up the URL. To see the syntax for glob pattern you can follow
+# You must name the keys foo-pattern, foo-use and foo-terminal where foo-use is the 
+# program that will open up the URL.
+# foo-pattern is the glob pattern. To see the syntax for glob pattern you can follow
 # this URL https://github.com/gobwas/glob#syntax
+# foo-terminal is for programs that runs in the terminal and you want it to open
+# up in the same terminal as tut.
 #
 # Example for youtube.com and youtu.be to open up in mpv instead of the browser
 #
 # y1-pattern=*youtube.com/watch*
 # y1-use=mpv
+# y1-terminal=false
 # y2-pattern=*youtu.be/*
 # y2-use=mpv
+# y2-terminal=false
 
 [desktop-notification]
 # Under this section you can turn on desktop notifications
