make the help message optional

--- a/config.example.ini
+++ b/config.example.ini
@@ -92,6 +92,10 @@ char-limit=500
 # default=true
 show-icons=true
 
+# If you want to show a message in the cmdbar how you can view the help message
+# default=true
+show-help=true
+
 # If you've learnt all the shortcut keys you can remove the help text and 
 # only show the key in tui. So it gets less cluttered.
 # default=false
