Add config desc

--- a/config.example.ini
+++ b/config.example.ini
@@ -101,6 +101,13 @@ show-help=true
 # default=false
 short-hints=false
 
+# If you don't want the whole UI to update, and only the text content.
+# This will lead to some artifacts being left on the screen when emojis are 
+# present. But it will keep the UI from flashing on every single toot in some
+# terminals.
+# default=false
+redraw-ui=false
+
 [media]
 # Your image viewer
 # default=xdg-open
