add support for themes

--- a/config.example.ini
+++ b/config.example.ini
@@ -243,6 +243,15 @@ poll=false
 posts=false
 
 [style]
+# You can use some themes that comes bundled with tut
+# check out the themes available on this URL
+# https://github.com/RasmusLindroth/tut/tree/master/themes
+
+# If you want to use your own theme set theme to none
+# then you can create your own theme below
+# default=default
+theme=default
+
 # All styles can be represented in their HEX value like #ffffff or with their
 # name, so in this case white. The only special value is "default" which equals
 # to transparent, so it will be the same color as your terminal.
@@ -252,6 +261,8 @@ posts=false
 # color prefixed with an asterik. If you don't want tut to guess the prefix you
 # can set the prefix yourself. If the xrdb color can't be found a preset color
 # will be used.
+#
+# REMEMBER to set theme to none above, otherwise this does nothing
 
 # The xrdb prefix used for colors in .Xresources.
 # default=guess
