update default theme

--- a/themes/default.ini
+++ b/themes/default.ini
@@ -1,12 +1,12 @@
-background=default
-text=white
+background=#272822
+text=#f8f8f2
 subtle=gray
 warning-text=#f92672
 text-special-one=#ae81ff
 text-special-two=#a6e22e
 top-bar-background=#f92672
-top-bar-text=white
+top-bar-text=#f8f8f2
 status-bar-background=#f92672
-status-bar-text=white
+status-bar-text=#f8f8f2
 list-selected-background=#f92672
-list-selected-text=white
+list-selected-text=f8f8f2
