--- a/themes/nord.ini
+++ b/themes/nord.ini
@@ -8,5 +8,7 @@ top-bar-background=#5E81AC
 top-bar-text=#ECEFF4
 status-bar-background=#5E81AC
 status-bar-text=#ECEFF4
+status-bar-view-background=#8FBCBB
+status-bar-view-text=#f8f8f2
 list-selected-background=#5E81AC
 list-selected-text=#ECEFF4
