--- a/themes/default.ini
+++ b/themes/default.ini
@@ -8,5 +8,7 @@ top-bar-background=#f92672
 top-bar-text=#f8f8f2
 status-bar-background=#f92672
 status-bar-text=#f8f8f2
+status-bar-view-background=#ae81ff
+status-bar-view-text=#f8f8f2
 list-selected-background=#f92672
-list-selected-text=f8f8f2
+list-selected-text=#f8f8f2
