add description and author in header comment

--- a/themes/papercolor-light.ini
+++ b/themes/papercolor-light.ini
@@ -1,3 +1,10 @@
+; This is an adaption of NLKNguyen (https://github.com/NLKNguyen)'s
+; PaperColor Light theme for tut (https://github.com/RasmusLindroth/tut).
+;
+; @author: stoerdebegga <stoerdebegga@mailbox.org>
+; @source: https://codeberg.org/stoerdebegga/papercolor-light-contrib
+; @source99: https://github.com/stoerdebegga/papercolor-light-contrib
+;
 background=#EEEEEE
 text=#4D4D4C
 subtle=#4271AE
