--- a/config.example.ini
+++ b/config.example.ini
@@ -1,17 +1,10 @@
 # Configuration file for tut
 
 [general]
-# If the program should check for new toots without user interaction. If you
-# don't enable this the program will only look for new toots when you reach the
-# bottom or top of your feed. With this enabled it will check for new toots
-# every x second.
+# Shows a confirmation view before actions such as favorite, delete toot, boost
+# etc.
 # default=true
-auto-load-newer=true
-
-# How many seconds between each pulling of new toots if you have enabled
-# auto-load-newer
-# default=60
-auto-load-seconds=60
+confirmation=true
 
 # The date format to be used. See https://godoc.org/time#Time.Format
 # default=2006-01-02 15:04
@@ -176,24 +169,24 @@ link-terminal=false
 # as tut. Set cX-terminal to true. The name will show up in the UI, so keep it
 # short so all five fits.
 # 
-# c1-name=img
-# c1-use=imv
+# c1-name=name
+# c1-use=program
 # c1-terminal=false
-#    
-# c2-name=
-# c2-use=
+# 
+# c2-name=name
+# c2-use=program
 # c2-terminal=false
-#   
-# c3-name=
-# c3-use=
+# 
+# c3-name=name
+# c3-use=program
 # c3-terminal=false
-#   
-# c4-name=
-# c4-use=
+# 
+# c4-name=name
+# c4-use=program
 # c4-terminal=false
-#   
-# c5-name=
-# c5-use=
+# 
+# c5-name=name
+# c5-use=program
 # c5-terminal=false
 
 [open-pattern]
@@ -251,11 +244,22 @@ posts=false
 # prefixed with an * first then look for URxvt or XTerm if it can't find any
 # color prefixed with an asterik. If you don't want tut to guess the prefix you
 # can set the prefix yourself. If the xrdb color can't be found a preset color
-# will be used.
+# will be used. You'll have to set theme=none for this to work.
 
 # The xrdb prefix used for colors in .Xresources.
 # default=guess
 xrdb-prefix=guess
+
+# You can use some themes that comes bundled with tut check out the themes
+# available on the URL below. If a theme is named "nord.ini" you just write
+# theme=nord
+# 
+# https://github.com/RasmusLindroth/tut/tree/master/themes
+# 
+# If you want to use your own theme set theme to none then you can create your
+# own theme below
+# default=default
+theme=default
 
 # The background color used on most elements.
 # default=xrdb:background
@@ -312,4 +316,3 @@ list-selected-background=xrdb:color5
 # The text color of selected list items.
 # default=xrdb:background
 list-selected-text=xrdb:background
-
