--- a/config.example.ini
+++ b/config.example.ini
@@ -96,6 +96,39 @@ show-help=true
 # default=true
 redraw-ui=true
 
+# The leader is used as a shortcut to run commands as you can do in Vim. By
+# default this is disabled and you enable it by setting a leader-key. It can
+# only consist of one char and I like to use comma as leader key. So to set it
+# you write leader-key=,
+# default=
+leader-key=
+
+# Number of milliseconds before the leader command resets. So if you tap the
+# leader-key by mistake or are to slow it empties all the input after X
+# milliseconds.
+# default=1000
+leader-timeout=1000
+
+# You set actions for the leader-key with one or more leader-action. It consists
+# of two parts first the action then the shortcut. And they're seperated by a
+# comma.
+# 
+# Available commands: home, direct, local, federated, compose, blocking,
+# bookmarks, saved, favorited, boosts, favorites, following, followers, muting,
+# profile, notifications, lists
+# 
+# The shortcuts are up to you, but keep them quite short and make sure they
+# don't collide. If you have one shortcut that is "f" and an other one that is
+# "fav", the one with "f" will always run and "fav" will never run.
+# 
+# Some examples:
+# leader-action=local,lo
+# leader-action=lists,li
+# leader-action=federated,fed
+# leader-action=direct,d
+# 
+
+
 [media]
 # Your image viewer.
 # default=xdg-open
@@ -349,7 +382,6 @@ list-selected-text=xrdb:background
 # look for "var KeyNames = map[Key]string{"
 # 
 # https://github.com/gdamore/tcell/blob/master/key.go
-# 
 
 # Keys for moving down
 # default="",'j','J',"Down"
