--- a/config.example.ini
+++ b/config.example.ini
@@ -497,6 +497,10 @@ user-block="[B]lock","Un[B]lock",'b','B'
 # default="[F]ollow","Un[F]ollow",'f','F'
 user-follow="[F]ollow","Un[F]ollow",'f','F'
 
+# Follow user
+# default="Follow [R]equest","Follow [R]equest",'r','R'
+user-follow-request-decide="Follow [R]equest","Follow [R]equest",'r','R'
+
 # Mute user
 # default="[M]ute","Un[M]ute",'m','M'
 user-mute="[M]ute","Un[M]ute",'m','M'
