--- a/config.example.ini
+++ b/config.example.ini
@@ -137,7 +137,7 @@ leader-timeout=1000
 # 
 # Available commands: home, direct, local, federated, compose, blocking,
 # bookmarks, saved, favorited, boosts, favorites, following, followers, muting,
-# profile, notifications, lists, tag, window
+# preferences, profile, notifications, lists, tag, window
 # 
 # The shortcuts are up to you, but keep them quite short and make sure they
 # don't collide. If you have one shortcut that is "f" and an other one that is
@@ -639,3 +639,35 @@ poll-multi-toggle="Toggle [M]ultiple",'m','M'
 # Change the expiration of poll
 # default="E[X]pires",'x','X'
 poll-expiration="E[X]pires",'x','X'
+
+# Change display name
+# default="[N]ame",'n','N'
+preference-name="[N]ame",'n','N'
+
+# Change default visibility of toots
+# default="[V]isibility",'v','V'
+preference-visibility="[V]isibility",'v','V'
+
+# Change bio in profile
+# default="[B]io",'b','B'
+preference-bio="[B]io",'b','B'
+
+# Save your preferences
+# default="[S]ave",'s','S'
+preference-save="[S]ave",'s','S'
+
+# Edit profile fields
+# default="[F]ields",'f','F'
+preference-fields="[F]ields",'f','F'
+
+# Add new field
+# default="[A]dd",'a','A'
+preference-fields-add="[A]dd",'a','A'
+
+# Edit current field
+# default="[E]dit",'e','E'
+preference-fields-edit="[E]dit",'e','E'
+
+# Delete current field
+# default="[D]elete",'d','D'
+preference-fields-delete="[D]elete",'d','D'
