--- a/config.example.ini
+++ b/config.example.ini
@@ -137,16 +137,23 @@ leader-timeout=1000
 # 
 # Available commands: home, direct, local, federated, compose, blocking,
 # bookmarks, saved, favorited, boosts, favorites, following, followers, muting,
-# preferences, profile, notifications, lists, tag, window
+# preferences, profile, notifications, lists, tag, window, list-placement,
+# list-split, proportions
 # 
 # The shortcuts are up to you, but keep them quite short and make sure they
 # don't collide. If you have one shortcut that is "f" and an other one that is
-# "fav", the one with "f" will always run and "fav" will never run. Tag is
-# special as you need to add the tag after, see the example below.
+# "fav", the one with "f" will always run and "fav" will never run. 
 # 
-# Window is also special as it's a shortcut for switching between the timelines
+# Some special leaders:
+# tag is special as you need to add the tag after, e.g. tag linux
+# window is special as it's a shortcut for switching between the timelines
 # you've set under general and they are zero indexed. window 0 = your first
 # timeline, window 1 = your second and so on.
+# list-placement as it takes the argument top, right, bottom or left
+# list-split as it takes the argument column or row
+# proportions takes the arguments [int] [int], where the first integer is the
+# list and the other content, e.g. proportions 1 3. See list-proportion above
+# for more information.
 # 
 # Some examples:
 # leader-action=local,lo
@@ -155,6 +162,9 @@ leader-timeout=1000
 # leader-action=direct,d
 # leader-action=tag linux,tl
 # leader-action=window 0,h
+# leader-action=list-placement bottom,b
+# leader-action=list-split column,c
+# leader-action=proportions 1 3,3
 # 
 
 
