fix default color

--- a/config/themes/default.ini
+++ b/config/themes/default.ini
@@ -12,7 +12,7 @@ status-bar-view-background=#ae81ff
 status-bar-view-text=#f8f8f2
 list-selected-background=#f92672
 list-selected-text=#f8f8f2
-list-selected-inactive-background=#f92672
+list-selected-inactive-background=#ae81ff
 list-selected-inactive-text=#f8f8f2
 controls-text=#f8f8f2
 controls-highlight=#a6e22e
