add default lang to config

--- a/config.example.ini
+++ b/config.example.ini
@@ -673,6 +673,10 @@ compose-toggle-content-warning="[T]oggle CW",'t','T'
 # default="[V]isibility",'v','V'
 compose-visibility="[V]isibility",'v','V'
 
+# Edit the language of a toot
+# default="[L]ang",'l','L'
+compose-language="[L]ang",'l','L'
+
 # Switch to creating a poll
 # default="P[O]ll",'o','O'
 compose-poll="P[O]ll",'o','O'
