notification setting for history

--- a/config.example.ini
+++ b/config.example.ini
@@ -310,6 +310,10 @@ favorite=false
 # default=false
 mention=false
 
+# Notification when someone edits their toot.
+# default=false
+update=false
+
 # Notification when someone boosts one of your toots.
 # default=false
 boost=false
