user search and multiple tags

--- a/config.example.ini
+++ b/config.example.ini
@@ -667,6 +667,14 @@ link-open="[O]pen",'o','O'
 # default="[Y]ank",'y','Y'
 link-yank="[Y]ank",'y','Y'
 
+# Open tag feed
+# default="[O]pen",'o','O'
+tag-open-feed="[O]pen",'o','O'
+
+# Toggle follow on tag
+# default="[F]ollow","Un[F]ollow",'f','F'
+tag-follow="[F]ollow","Un[F]ollow",'f','F'
+
 # Edit spoiler text on new toot
 # default="[C]W text",'c','C'
 compose-edit-spoiler="[C]W text",'c','C'
