Typo: sensetive -> sensitive in config

--- a/config.example.ini
+++ b/config.example.ini
@@ -488,7 +488,7 @@ timeline-name-text=
 # with single quotation marks or double ones.
 # 
 # The single ones are for single chars like 'a', 'b', 'c' and double marks are
-# for special keys like "Enter". Remember that they are case sensetive.
+# for special keys like "Enter". Remember that they are case sensitive.
 # 
 # To find the names of special keys you have to go to the following site and
 # look for "var KeyNames = map[Key]string{"
