--- a/config/themes/default.ini
+++ b/config/themes/default.ini
@@ -10,6 +10,7 @@ status-bar-background=#f92672
 status-bar-text=#f8f8f2
 status-bar-view-background=#ae81ff
 status-bar-view-text=#f8f8f2
+command-text=#f8f8f2
 list-selected-background=#f92672
 list-selected-text=#f8f8f2
 list-selected-inactive-background=#ae81ff
