--- a/config/themes/nord.ini
+++ b/config/themes/nord.ini
@@ -10,5 +10,6 @@ status-bar-background=#5E81AC
 status-bar-text=#ECEFF4
 status-bar-view-background=#8FBCBB
 status-bar-view-text=#f8f8f2
+command-text=#ECEFF4
 list-selected-background=#5E81AC
 list-selected-text=#ECEFF4
