--- a/config/themes/papercolor-light.ini
+++ b/config/themes/papercolor-light.ini
@@ -17,5 +17,6 @@ status-bar-background=#4271AE
 status-bar-text=#EEEEEE
 status-bar-view-background=#718C00
 status-bar-view-text=#f5f5f5
+command-text=#4D4D4C
 list-selected-background=#D7005F
 list-selected-text=#f5f5f5
