--- a/config.example.ini
+++ b/config.example.ini
@@ -622,9 +622,13 @@ status-view-focus="[V]iew",'v','V'
 # default="[Y]ank",'y','Y'
 status-yank="[Y]ank",'y','Y'
 
-# Remove the spoiler
-# default="Press [Z] to toggle spoiler",'z','Z'
-status-toggle-spoiler="Press [Z] to toggle spoiler",'z','Z'
+# Show the content in a content warning
+# default="Press [Z] to toggle cw",'z','Z'
+status-toggle-cw="Press [Z] to toggle cw",'z','Z'
+
+# Show the content of a filtered toot
+# default="Press [Z] to view filtered toot",'z','Z'
+status-show-filtered="Press [Z] to view filtered toot",'z','Z'
 
 # View avatar
 # default="[A]vatar",'a','A'
@@ -694,9 +698,9 @@ tag-open-feed="[O]pen",'o','O'
 # default="[F]ollow","Un[F]ollow",'f','F'
 tag-follow="[F]ollow","Un[F]ollow",'f','F'
 
-# Edit spoiler text on new toot
+# Edit content warning text on new toot
 # default="[C]W text",'c','C'
-compose-edit-spoiler="[C]W text",'c','C'
+compose-edit-cw="[C]W text",'c','C'
 
 # Edit the text on new toot
 # default="[E]dit text",'e','E'
