show boosted instead of booster

--- a/config.example.ini
+++ b/config.example.ini
@@ -134,6 +134,11 @@ show-help=true
 # default=false
 stick-to-top=false
 
+# If you want to display the username of the person being boosted instead of the
+# person that boosted.
+# default=false
+show-boosted-user=false
+
 # 0 = No terminal title
 # 1 = Show title in terminal and top bar
 # 2 = Only show terminal title, and no top bar in tut.
