update example config

--- a/config.example.ini
+++ b/config.example.ini
@@ -13,8 +13,12 @@ mouse-support=false
 # Timelines adds windows of feeds. You can customize the number of feeds, what
 # they should show and the key to activate them.
 # 
-# Available timelines: home, direct, local, federated, bookmarks, saved,
-# favorited, notifications, lists, tag
+# Available timelines: home, direct, local, federated, special-all,
+# special-boosts, special-replies, bookmarks, saved, favorited, notifications,
+# lists, tag
+# 
+# The ones named special-* are the home timeline with only boosts and/or
+# replies. All contains both, -boosts only boosts and -replies only replies.
 # 
 # Tag is special as you need to add the tag after, see the example below.
 # 
@@ -169,11 +173,14 @@ leader-timeout=1000
 # of two parts first the action then the shortcut. And they're separated by a
 # comma.
 # 
-# Available commands: home, direct, local, federated, clear-notifications,
-# compose, edit, history, blocking, bookmarks, saved, favorited, boosts,
-# favorites, following, followers, muting, newer, preferences, profile,
-# notifications, lists, stick-to-top, tag, tags, window, list-placement,
-# list-split, proportions
+# Available commands: home, direct, local, federated, special-all,
+# special-boosts, special-replies, clear-notifications, compose, edit, history,
+# blocking, bookmarks, refetch, saved, favorited, boosts, favorites, following,
+# followers, muting, newer, preferences, profile, notifications, lists,
+# stick-to-top, tag, tags, window, list-placement, list-split, proportions
+# 
+# The ones named special-* are the home timeline with only boosts and/or
+# replies. All contains both, -boosts only boosts and -replies only replies.
 # 
 # The shortcuts are up to you, but keep them quite short and make sure they
 # don't collide. If you have one shortcut that is "f" and an other one that is
