--- a/config.example.ini
+++ b/config.example.ini
@@ -13,8 +13,12 @@ mouse-support=false
 # Timelines adds windows of feeds. You can customize the number of feeds, what
 # they should show and the key to activate them.
 # 
-# Available timelines: home, direct, local, federated, bookmarks, saved,
-# favorited, notifications, lists, tag
+# Available timelines: home, direct, local, federated, special-all,
+# special-boosts, special-replies, bookmarks, saved, favorited, notifications,
+# lists, tag
+# 
+# The ones named special-* are the home timeline with only boosts and/or
+# replies. All contains both, -boosts only boosts and -replies only replies.
 # 
 # Tag is special as you need to add the tag after, see the example below.
 # 
@@ -134,6 +138,11 @@ show-help=true
 # default=false
 stick-to-top=false
 
+# If you want to display the username of the person being boosted instead of the
+# person that boosted.
+# default=false
+show-boosted-user=false
+
 # 0 = No terminal title
 # 1 = Show title in terminal and top bar
 # 2 = Only show terminal title, and no top bar in tut.
@@ -164,11 +173,14 @@ leader-timeout=1000
 # of two parts first the action then the shortcut. And they're separated by a
 # comma.
 # 
-# Available commands: home, direct, local, federated, clear-notifications,
-# compose, edit, history, blocking, bookmarks, saved, favorited, boosts,
-# favorites, following, followers, muting, newer, preferences, profile,
-# notifications, lists, stick-to-top, tag, tags, window, list-placement,
-# list-split, proportions
+# Available commands: home, direct, local, federated, special-all,
+# special-boosts, special-replies, clear-notifications, compose, edit, history,
+# blocking, bookmarks, refetch, saved, favorited, boosts, favorites, following,
+# followers, muting, newer, preferences, profile, notifications, lists,
+# stick-to-top, tag, tags, window, list-placement, list-split, proportions
+# 
+# The ones named special-* are the home timeline with only boosts and/or
+# replies. All contains both, -boosts only boosts and -replies only replies.
 # 
 # The shortcuts are up to you, but keep them quite short and make sure they
 # don't collide. If you have one shortcut that is "f" and an other one that is
@@ -622,9 +634,13 @@ status-view-focus="[V]iew",'v','V'
 # default="[Y]ank",'y','Y'
 status-yank="[Y]ank",'y','Y'
 
-# Remove the spoiler
-# default="Press [Z] to toggle spoiler",'z','Z'
-status-toggle-spoiler="Press [Z] to toggle spoiler",'z','Z'
+# Show the content in a content warning
+# default="Press [Z] to toggle cw",'z','Z'
+status-toggle-cw="Press [Z] to toggle cw",'z','Z'
+
+# Show the content of a filtered toot
+# default="Press [Z] to view filtered toot",'z','Z'
+status-show-filtered="Press [Z] to view filtered toot",'z','Z'
 
 # View avatar
 # default="[A]vatar",'a','A'
@@ -694,9 +710,9 @@ tag-open-feed="[O]pen",'o','O'
 # default="[F]ollow","Un[F]ollow",'f','F'
 tag-follow="[F]ollow","Un[F]ollow",'f','F'
 
-# Edit spoiler text on new toot
+# Edit content warning text on new toot
 # default="[C]W text",'c','C'
-compose-edit-spoiler="[C]W text",'c','C'
+compose-edit-cw="[C]W text",'c','C'
 
 # Edit the text on new toot
 # default="[E]dit text",'e','E'
