--- a/config.example.ini
+++ b/config.example.ini
@@ -13,12 +13,10 @@ mouse-support=false
 # Timelines adds windows of feeds. You can customize the number of feeds, what
 # they should show and the key to activate them.
 # 
-# Available timelines: home, direct, local, federated, special-all,
-# special-boosts, special-replies, bookmarks, saved, favorited, notifications,
-# lists, tag
+# Available timelines: home, direct, local, federated, special, bookmarks,
+# saved, favorited, notifications, lists, tag
 # 
-# The ones named special-* are the home timeline with only boosts and/or
-# replies. All contains both, -boosts only boosts and -replies only replies.
+# The one named special are the home timeline with only boosts and/or replies.
 # 
 # Tag is special as you need to add the tag after, see the example below.
 # 
