--- a/config.example.ini
+++ b/config.example.ini
@@ -171,12 +171,13 @@ leader-timeout=1000
 # of two parts first the action then the shortcut. And they're separated by a
 # comma.
 # 
-# Available commands: home, direct, local, federated, special-all,
-# special-boosts, special-replies, clear-notifications, compose, edit, history,
-# blocking, bookmarks, refetch, saved, switch, favorited, boosts, favorites,
-# following, followers, muting, newer, preferences, profile, notifications,
-# mentions, lists, stick-to-top, tag, tags, window, list-placement, list-split,
-# proportions
+# Available commands: blocking, bookmarks, boosts, clear-notifications,
+# close-window, compose, direct, edit, favorited, favorites, federated,
+# followers, following, history, home, list-placement, list-split, lists, local,
+# mentions, move-window-left, move-window-right, move-window-up,
+# move-window-down, move-window-home, move-window-end, muting, newer,
+# notifications, preferences, profile, proportions, refetch, saved, special-all,
+# special-boosts, special-replies, stick-to-top, switch, tag, tags, window
 # 
 # The ones named special-* are the home timeline with only boosts and/or
 # replies. All contains both, -boosts only boosts and -replies only replies.
@@ -196,9 +197,8 @@ leader-timeout=1000
 # list and the other content, e.g. proportions 1 3. See list-proportion above
 # for more information.
 # switch let's you go to a timeline if it already exists, if it doesn't it will
-# open the timeline in your current active window. The syntax is almost the same
-# as in timelines= and is displayed under the examples.
-# 
+# open the timeline in a new window. The syntax is almost the same as in
+# timelines= and is displayed under the examples.
 # 
 # Some examples:
 # leader-action=local,lo
@@ -213,7 +213,7 @@ leader-timeout=1000
 # leader-action=proportions 1 3,3
 # 
 # Syntax for switch:
-# leader-action=switch feed,[showBoosts],[showReplies],shortcut
+# leader-action=switch feed,shortcut,[name],[showBoosts],[showReplies]
 # showBoosts can be either true or false and they are both optional. Here are
 # some examples:
 # 
