--- a/config.example.ini
+++ b/config.example.ini
@@ -14,7 +14,7 @@ mouse-support=false
 # they should show and the key to activate them.
 # 
 # Available timelines: home, direct, local, federated, special, bookmarks,
-# saved, favorited, notifications, lists, tag
+# saved, favorited, notifications, lists, mentions, tag
 # 
 # The one named special are the home timeline with only boosts and/or replies.
 # 
@@ -171,11 +171,13 @@ leader-timeout=1000
 # of two parts first the action then the shortcut. And they're separated by a
 # comma.
 # 
-# Available commands: home, direct, local, federated, special-all,
-# special-boosts, special-replies, clear-notifications, compose, edit, history,
-# blocking, bookmarks, refetch, saved, favorited, boosts, favorites, following,
-# followers, muting, newer, preferences, profile, notifications, lists,
-# stick-to-top, tag, tags, window, list-placement, list-split, proportions
+# Available commands: blocking, bookmarks, boosts, clear-notifications,
+# close-window, compose, direct, edit, favorited, favorites, federated,
+# followers, following, history, home, list-placement, list-split, lists, local,
+# mentions, move-window-left, move-window-right, move-window-up,
+# move-window-down, move-window-home, move-window-end, muting, newer,
+# notifications, preferences, profile, proportions, refetch, saved, special-all,
+# special-boosts, special-replies, stick-to-top, switch, tag, tags, window
 # 
 # The ones named special-* are the home timeline with only boosts and/or
 # replies. All contains both, -boosts only boosts and -replies only replies.
@@ -194,6 +196,9 @@ leader-timeout=1000
 # proportions takes the arguments [int] [int], where the first integer is the
 # list and the other content, e.g. proportions 1 3. See list-proportion above
 # for more information.
+# switch let's you go to a timeline if it already exists, if it doesn't it will
+# open the timeline in a new window. The syntax is almost the same as in
+# timelines= and is displayed under the examples.
 # 
 # Some examples:
 # leader-action=local,lo
@@ -206,6 +211,14 @@ leader-timeout=1000
 # leader-action=list-placement bottom,b
 # leader-action=list-split column,c
 # leader-action=proportions 1 3,3
+# 
+# Syntax for switch:
+# leader-action=switch feed,shortcut,[name],[showBoosts],[showReplies]
+# showBoosts can be either true or false and they are both optional. Here are
+# some examples:
+# 
+# leader-action=switch home,false,true,h
+# leader-action=switch tag tut,tt
 # 
 
 
