--- a/config.example.toml
+++ b/config.example.toml
@@ -134,8 +134,8 @@ leader-timeout=1000
 # [[general.timelines]]
 # name="home"
 # type="home"
-# show-boosts=true
-# show-replies=true
+# hide-boosts=false
+# hide-replies=false
 # 
 # [[general.timelines]]
 # name = "Notifications"
