--- a/config.example.toml
+++ b/config.example.toml
@@ -648,7 +648,7 @@ special-keys=["Left"]
 keys=["l","L"]
 
 # default=["Right"]
-specialkeys=["Right"]
+special-keys=["Right"]
 
 [input.main-prev-pane]
 # Focus on the previous feed pane
