--- a/config.example.toml
+++ b/config.example.toml
@@ -105,8 +105,9 @@ show-boosted-user=false
 
 # 0 = No terminal title
 # 1 = Show title in terminal and top bar
-# 2 = Only show terminal title, and no top bar in tut.
-# valid: 0, 1, 2
+# 2 = Only show terminal title, and no top bar in tut
+# 3 = No terminal title and no top bar in tut.
+# valid: 0, 1, 2, 4
 # default=0
 terminal-title=0
 
