--- a/config.example.toml
+++ b/config.example.toml
@@ -22,7 +22,7 @@ date-format="2006-01-02 15:04"
 
 # Format for dates the same day. See date-format for more info.
 # default="15:04"
-date-tody-format="15:04"
+date-today-format="15:04"
 
 # This displays relative dates instead for statuses that are one day or older
 # the output is 1y2m1d (1 year 2 months and 1 day)
